fixed mobile version layout issue

--- a/src/components/Sections/Section.module.css
+++ b/src/components/Sections/Section.module.css
@@ -62,6 +62,9 @@ button{
     .All-section{
         height:100%;
     }
+    .row{
+        gap:3rem;
+    }
     
 }
 
